fractal-gtk/res/app.css
.rooms {
    background-color: alpha(@borders, 0.25);
}

.full-separator {
    margin-top: 0px;
    margin-bottom: 0px;
}

.notify-badge {
    background-color: #555;
    color: white;
    font-weight: bold;
    font-size: 0.8em;
    border-radius: 10px;
    min-width: 10px;
    padding: 1px 5px;
}

.notify-highlight {
    background-color: @theme_selected_bg_color;
}

.notify-bold {
    font-weight: bold;
}

.room-row {
    padding: 8px 0px;
}

.room-list list row:selected .notify-badge {
    background-color: white;
    color: @theme_selected_bg_color;
}

.room-list.sidebar {
    border: none;
}

.room-avatar-container .avatar {
    margin: 3px;
}

.username {
    font-weight: bold;
}

.room-title {
    padding: 5px;
    padding-bottom: 2px;
    border-bottom: 1px solid @borders;
    margin-bottom: 5px;
    margin-left: 4px;
    margin-right: 4px;
    font-weight: bold;
    font-size: x-small;
    color: @insensitive_fg_color;
}

.room-empty-text {
    color: @insensitive_fg_color;
    padding: 10px;
    font-size: x-small;
}

.member-uid {
    color: @insensitive_fg_color;
    font-size: x-small;
}

.direct-chat {
    color: alpha(@theme_fg_color, 0.5);
}
.room-list list row:selected .direct-chat {
    color: alpha(@theme_selected_fg_color, 0.5);
}

